--- a/style.css
+++ b/style.css
@@ -60,10 +60,17 @@ body {
 
 */
 
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .grid {
     display: flex;
     justify-content: center;
-    
+    max-width: 700px;
+    flex-wrap: wrap;
 }
 
 /*
