--- a/style.css
+++ b/style.css
@@ -62,8 +62,14 @@ body {
 
 .content {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.preferences {
+    padding: 30px 80px;
+    background-color: #252525;
+    border-radius: 10px;
 }
 
 .grid {
