Change display style to grid, remove color functions for tests, add grid slider

--- a/style.css
+++ b/style.css
@@ -69,19 +69,27 @@ body {
 }
 
 .preferences {
+    display: flex;
     padding: 30px 80px;
     background-color: #252525;
     border-radius: 10px;
     color: #fff;
-    
-    
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    font-size: 24px;
+    font-weight: 700;
 }
 
 .grid {
-    display: flex;
-    justify-content: center;
-    max-width: 672px;
-    flex-wrap: wrap;
+    display: grid;
+    width: 500px;
+    height: 500px;
+}
+
+.grid-square {
+    border: 1px solid #565656;
+    background-color: #252525;
 }
 
 
@@ -97,7 +105,7 @@ body {
     align-items: center;
     padding: 20px;
     color: #D9D9D9;
-    font-size: 28px;
+    font-size: 16px;
     font-weight: bold;
 }
 
