--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
 
 .preferences {
     display: flex;
-    padding: 30px 80px;
+    padding: 30px;
     background-color: #252525;
     border-radius: 10px;
     color: #fff;
@@ -83,15 +83,41 @@ body {
 
 .grid {
     display: grid;
-    width: 500px;
-    height: 500px;
+    width: 700px;
+    height: 700px;
 }
 
 .grid-square {
-    border: 1px solid #565656;
     background-color: #252525;
 }
 
+.clear {
+    background-color: #9DC3ED;
+    border: none;
+    padding: 10px 60px;
+    border-radius: 5px;
+    font-size: 20px;
+    color: #264A70;
+    font-weight: bold;
+}
+
+input[type="color"] {
+	-webkit-appearance: none;
+	border: none;
+	width: 100px;
+	height: 100px;
+    background-color: #252525
+}
+
+input[type='color']::-webkit-color-swatch-wrapper {
+    padding: 0;
+  }
+  
+input[type='color']::-webkit-color-swatch {
+    border-color: transparent;
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 
 /*
 
