Change colors pallete, images color and made minor corrections

--- a/style.css
+++ b/style.css
@@ -3,9 +3,17 @@
     padding: 0;
 }
 
+:root {
+    --main-background-color: #606060;
+    --card-background-color: #414141;
+    --grid-background-color: #e2f3ff;
+    --header-background-color: #414141;
+    --font-color: #4dbbff;
+}
+
 body {
     font-family: 'Quicksand', sans-serif;
-    background-image: url('images/background.png');
+    background-color: var(--main-background-color);
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -24,20 +32,21 @@ body {
     padding: 20px;
     gap: 40px;
     align-items: center;
-    filter: drop-shadow(0px 6px 4px rgba(0,4,0,0.5))
+    filter: drop-shadow(0px 4px 6px rgba(0,4,0,0.2));
 }
 
 .header h1 {
     font-weight: bold;
     font-size: 48px;
-    background-color: #264A70;
-    color: #96B8EE;
+    background-color: var(--header-background-color);
+    color: var(--font-color);
     padding: 15px 40px;
     border-radius: 20px;
+
 }
 
 .header a {
-    background-color: #7F9AC5;
+    background-color: var(--header-background-color);
     border-radius: 50%;
     padding: 10px;
     border: 0px;
@@ -64,14 +73,25 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    filter: drop-shadow(0px 6px 4px rgba(0,4,0,0.5));
     gap: 10%;
 }
+
+.grid {
+    display: grid;
+    width: 700px;
+    height: 700px;
+}
+
+/*
+
+    PREFERENCES
+
+*/
 
 .preferences {
     display: flex;
     padding: 30px;
-    background-color: #252525;
+    background-color: var(--card-background-color);
     border-radius: 10px;
     color: #fff;
     flex-direction: column;
@@ -81,24 +101,20 @@ body {
     font-weight: 700;
 }
 
-.grid {
-    display: grid;
-    width: 700px;
-    height: 700px;
-}
-
-.grid-square {
-    background-color: #252525;
-}
-
 .clear {
-    background-color: #9DC3ED;
-    border: none;
+    background: none;
+    border: 3px solid var(--font-color);
     padding: 10px 60px;
-    border-radius: 5px;
+    border-radius: 10px;
     font-size: 20px;
-    color: #264A70;
+    color: var(--font-color);
     font-weight: bold;
+    transition: 0.2s;
+}
+
+.clear:hover {
+    background-color: var(--font-color);
+    color: white;
 }
 
 input[type="color"] {
@@ -106,7 +122,8 @@ input[type="color"] {
 	border: none;
 	width: 100px;
 	height: 100px;
-    background-color: #252525
+    background-color: var(--card-background-color);
+    transition: 0.3s
 }
 
 input[type='color']::-webkit-color-swatch-wrapper {
@@ -117,6 +134,25 @@ input[type='color']::-webkit-color-swatch {
     border-color: transparent;
     border-radius: 50%;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+input[type="color"]:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+#slider {
+    appearance: none;
+    height: 0.5em;
+    border-radius: 5px;
+    background-color: var(--font-color);
+    transform: scale(1.3)
+}
+
+input[type="range"]:hover,
+input[type="color"]:hover,
+.clear:hover {
+    cursor: pointer;
 }
 
 /*
